# group-project-team-19

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README_195.md  Requirements.txt.txt
STEP Files/STEP Files/: 23mm Link.STEP  72.5mm Link.STEP  Base Bearing Holder.STEP  Base Bearing Retainer.STEP  Base Bottom Plate Hard Mount 0.2520.STEP  Base Bottom Plate Hard Mount.STEP  Base Bottom Plate.STEP  Base Joint Coupler.STEP  Base Joint Horn Coupler NS.STEP  Base Joint Horn Coupler inserts.STEP  Base Joint Horn Coupler with inserts .STEP  Base Joint Horn Coupler.STEP  Base Mount Pillar.STEP  Camera Mount.STEP  Chesster Arm Wrist Interface.STEP  Drive Link V4 Extended Base.STEP  Drive Link V5 long.STEP  Drive Link V5long.STEP  Finger 2.STEP  Finger Slave Link.STEP  Finger V2.STEP  Gear Link Bearing Coupler5.STEP  Gripper Mount V4.STEP  Hand Finger Camera Mount V2.STEP  Hand Finger Camera Mount.STEP  Hand Finger Mount V2.STEP  Hand Finger Mount.STEP  Hand Link.STEP  Inserts Mount Hinge.STEP  Joint Coupler New Servo.STEP  Joint Coupler V3.STEP  Mount Hinge.STEP  NS Retainer Base Link NS.STEP  NS Servo Backing Plate.STEP  NS ShiftedServoGripperMount.STEP  NS Slave Link.STEP  NS Wrist V4.STEP  NS base servo spacer.STEP  NS short base servo spacer.STEP  NewServo Slave Link.STEP  (+24 more)
docs/evaluation/: Stress-test-results.md
include/: interlocks.hpp  motioncontroller.hpp  serialmanager.hpp  servocontroller.hpp  timers.hpp  trajectplanner.hpp
src/: blundr_gcs.py  interlocks.cpp  main.cpp  serialmanager.cpp
tests/arduino/: servo_angles.py  (+4 more)
ui/: main.py
workflows/: ci.yml
(+20 files in other folders)
